# Byngosink-Tornado

./: .gitignore  README.md  pyproject.toml
src/: boards.py  byngosink-server.py  models.py
src/generators/: Goal.py  __init__.py  generators.py  wrapping.py
src/generators/jsons/: Hollow Knight.jsonc  The Long Dark.jsonc
src/handlers/: __init__.py  general.py  room_handlers.py  ws.py
src/handlers/modules/: BoardModule.py  __init__.py
src/static/css/: board.css  main.css  room.css
src/static/js/: board.js  index.js  room.js  websocket.js
src/templates/: board.html  home.html  login.html  room.html
src/templates/components/: board_creation.html
src/templates/components/boards/: basic.html
